# EpicSmartBackendApp-4-2-Claude

./: .env.template  .gitignore  DEMO_GUIDE.md  RequiredSettings.md  architecture.md  cfip-progress-tracker.html  drug-cost-explained.md  healthcare-integration-guide.md  phase2-plan.md  phase3-plan.md  phase4-plan.md  phase5-plan.md  phase6-plan.md  pyproject.toml  requirement.md  requirements.txt
.claude/: settings.local.json
app/: config.py  main.py
app/agents/: denial_prediction.py  evidence_chains.py  orchestrator.py  pgx_safety.py  specialty_pa.py
app/api/: cds_hooks.py  jwks.py
app/data/: db.py  seed_cpic.py  seed_payer_rules.py  seed_synthetic.py
app/fhir/: auth.py  client.py  epic_client.py
app/intelligence/: appeal_generator.py  card_composer.py  openai_client.py
app/models/: cds_hooks.py  domain.py  fhir_bundle.py  fhir_types.py
app/rules/: cpic_engine.py  denial_scorer.py  drug_classifier.py  nccn_validator.py  payer_rules.py
docs/: cfip-overview.html  prescription-to-payment-workflow.md
tests/: test_cds_hooks.py  test_denial_scorer.py  test_fhir_client.py  test_orchestrator.py  test_pgx_engine.py
tools/: verify_epic.py
tools/cds_hooks_harness/: harness.py  scenarios.py
tools/cds_hooks_harness/static/: index.html
